# surya-computer-archive

./: README.md
archived/: pc_adacency_tree.cpp  pc_adacency_tree.h  webcam.cpp
archived/serial_comms/: CMakeLists.txt  README.md  package.xml  send.py  send_original.py
archived/server/: client.cpp  client.hpp  frame_sender.cpp  frame_sender.hpp  main.hpp  rgb_reader.cpp  rgb_reader.h  server.cpp  server.hpp
archived/webapp-comms-scripts/: client_udp.c  webcam_image_subscriber.py
nonros_programs/obstacle_detection/: CMakeLists.txt  package.xml
nonros_programs/obstacle_detection/src/: CMakeLists.txt  extract_capture.cpp  extract_capture.h  gradient_map.cpp  gradient_map.h  local_path_planner_graph.cpp  local_path_planner_graph.h  obstacle_detect_node.cpp  obstacle_detect_process.cpp  realsense_capture.cpp  realsense_capture.h  realsense_frame.cpp  rgb_writer.cpp  rgb_writer.h  startup.cpp
nonros_programs/obstacle_detection/src/archived_code/: pc_tree.cpp
nonros_programs/obstacle_detection/src/models/: obstacle_clustering_tree.cpp  obstacle_clustering_tree.h  pc_adacency_tree.cpp  pc_adacency_tree.h  pc_adacency_tree_gradientify.cpp  realsense.h  slam_mapper.h
nonros_programs/obstacle_detection/src/shell/: artifact_build.ps1  artifact_build.sh  realsense_extract.ps1  realsense_extract.sh  wc
nonros_programs/obstacle_detection/stereo/: out.ply
nonros_programs/obstacle_detection/test/: gradient_map_test.cpp  obstacle_detection_test.cpp  pc_tree_gradient_test.cpp  pc_tree_quadrant_test.cpp  pc_tree_simple_tests.cpp  terrain_map_test.cpp
nonros_programs/obstacle_detection/test/assets/: gradients.ply  gradients_2025-02-02-21-26-12.ply  obstacles.ply  obstacles_2025-02-02-21-26-12.ply  obstacles_python.ply  path_python.ply  path_python1.ply  vertices.ply  vertices_2025-02-02-21-26-12.ply  vertices_2025-02-02-21-47-31.ply  vertices_2025-02-02-21-49-26.ply  vertices_python.ply
nonros_programs/obstacle_detection/test/assets/matrix_benchmarks/: matrix_benchmark_2025-02-02-21-26-12.txt  matrix_benchmark_2025-03-13-17-20-52.txt  matrix_benchmark_2025-03-13-17-25-02.txt  matrix_benchmark_2025-03-13-17-40-04.txt  test_points.case.txt
nonros_programs/obstacle_detection/test/assets/ply_samples/: gradient_tree_out.ply
nonros_programs/obstacle_detection/test/test-visualizers/: depth_test_program.py  gradient_ply.py  pcTreePlotTest.py  ply_file_reader.py  ply_overlay.py  pointcloud_rotation_view.py  realtime_visualizer.py
nonros_programs/surya_realsense_scripts/: realsense_launch.py  realsense_sdk_extract.ps1
